Verify that all of the cells through the transformations section are correct. Update plotly code for the numeric column distributions chart

--- a/notebooks/__marimo__/movie_metadata.ipynb
+++ b/notebooks/__marimo__/movie_metadata.ipynb
@@ -33,6 +33,7 @@
     "import seaborn as sns\n",
     "from great_tables import GT\n",
     "from plotly.subplots import make_subplots\n",
+    "from itertools import product\n",
     "\n",
     "pl.Config.set_tbl_rows(25)"
    ]
@@ -66,7 +67,7 @@
     "3. Standardize all column names to lowercase for uniformity.\n",
     "4. Reorder the columns into a more logical order.\n",
     "5. Adjust the max allowed length of strings in outputs to easily see the full titles of movies\n",
-    "    - the movie title is treated as the priority for viewing string output in the dataframe"
+    "    - The movie title is treated as the priority for viewing string output in the dataframe."
    ]
   },
   {
@@ -92,9 +93,9 @@
     "\n",
     "# Reorder columns.\n",
     "_col_order = [\n",
+    "    \"released_year\",\n",
     "    \"series_title\",\n",
     "    \"director\",\n",
-    "    \"released_year\",\n",
     "    \"genre\",\n",
     "    \"star1\",\n",
     "    \"star2\",\n",
@@ -127,7 +128,7 @@
     }
    },
    "source": [
-    "## Explore\n",
+    "## Identify Needed Transformations\n",
     "### Columns Per Data Type"
    ]
   },
@@ -237,9 +238,7 @@
    "outputs": [],
    "source": [
     "# Cast to integer by supressing the error that results. Then find the null values.\n",
-    "mm_transformed.filter(\n",
-    "    pl.col(\"released_year\").cast(pl.Int64, strict=False).is_null()\n",
-    ")"
+    "mm_transformed.filter(pl.col(\"released_year\").cast(pl.Int64, strict=False).is_null())"
    ]
   },
   {
@@ -343,7 +342,7 @@
     "\n",
     "## Transformations\n",
     "### Column Transformations\n",
-    "- `released_year` - There is one row value that is preventing the column from being cast as an integer column. The movie is `\"Apollo 13\"`; the `released_year` value is `\"PG\"` and should be changed to `\"1995\"`. Then the column can be cast to an integer column. `pl.lit()` is needed because polars would otherwise try to look for a column named `\"1995\"`.\n",
+    "- `released_year` - There is one row value that is preventing the column from being cast as an integer column. The movie is `\"Apollo 13\"`; the `released_year` value is `\"PG\"` and should be changed to `\"1995\"`. Then the column can be cast to an unsigned 16-bit integer type. `pl.lit()` is needed because polars would otherwise try to look for a column named `\"1995\"`.\n",
     "- `genre` - The values need to be split on `\", \"`. The split operation will cast the column as a list type.\n",
     "- `runtime` - The characters `\" min\"` need to be removed. Then cast to an unsigned 16-bit integer type.\n",
     "- `gross` - All of the `\",\"` characters need to be removed. Then cast to an unsigned 64-bit integer type.\n",
@@ -380,14 +379,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "22",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "marimo": {
+     "config": {
+      "hide_code": true
+     }
+    }
+   },
    "source": [
-    "# Check that the Apollo 13 entry is corrected.\n",
-    "mm.filter(pl.col(\"series_title\") == \"Apollo 13\")"
+    "### Validate fix for Apollo 13 `release_year` Value"
    ]
   },
   {
@@ -397,59 +399,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Step 1: Select all integer columns and compute max and min\n",
-    "agg_df = mm.select(\n",
-    "    [\n",
-    "        cs.integer().max().name.suffix(\"_max\"),\n",
-    "        cs.integer().min().name.suffix(\"_min\"),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "# Step 2: Unpivot to long format so each row is a column name\n",
-    "long_df = agg_df.unpivot(cs.all(), variable_name=\"column_stat\", value_name=\"value\")\n",
-    "\n",
-    "long_df\n",
-    "\n",
-    "# # Step 3: Extract column name and stat type, then pivot to desired format\n",
-    "# result = (\n",
-    "#     long_df\n",
-    "#     .with_columns([\n",
-    "#         pl.col(\"column_stat\").str.extract(r\"(.+)_max\", 1).alias(\"column\"),\n",
-    "#         pl.col(\"column_stat\").str.extract(r\"(.+)_min\", 1).alias(\"column_min\"),\n",
-    "#         (pl.col(\"column_stat\").str.ends_with(\"_max\")).alias(\"is_max\"),\n",
-    "#     ])\n",
-    "#     .with_columns([\n",
-    "#         pl.when(pl.col(\"is_max\"))\n",
-    "#           .then(pl.col(\"column\"))\n",
-    "#           .otherwise(pl.col(\"column_min\"))\n",
-    "#           .alias(\"column\"),\n",
-    "#         pl.when(pl.col(\"is_max\"))\n",
-    "#           .then(pl.col(\"value\"))\n",
-    "#           .otherwise(pl.col(\"value\") > 0)\n",
-    "#           .alias(\"value\"),\n",
-    "#         pl.when(pl.col(\"is_max\"))\n",
-    "#           .then(pl.lit(\"max\"))\n",
-    "#           .otherwise(pl.lit(\"min_gt_0\"))\n",
-    "#           .alias(\"stat\"),\n",
-    "#     ])\n",
-    "#     .filter(pl.col(\"column\").is_not_null())\n",
-    "#     .select([\"column\", \"stat\", \"value\"])\n",
-    "#     .pivot(\n",
-    "#         values=\"value\",\n",
-    "#         index=\"column\",\n",
-    "#         columns=\"stat\"\n",
-    "#     )\n",
-    "# )"
+    "mm.filter(pl.col(\"series_title\") == \"Apollo 13\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "24",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "marimo": {
+     "config": {
+      "hide_code": true
+     }
+    }
+   },
    "source": [
-    "GT(pl.DataFrame([2**8, 2**16, 2**32])).fmt_scientific()"
+    "## Exploratory Analysis\n",
+    "### Distributions of Numeric Columns"
    ]
   },
   {
@@ -459,7 +424,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GT(maxes).fmt_scientific()"
+    "# Select only the numeric columns.\n",
+    "_numeric_data = mm.select(cs.numeric())\n",
+    "\n",
+    "# Subplot grid size.\n",
+    "_subplot_rows = 2\n",
+    "_subplot_cols = 3\n",
+    "\n",
+    "# Create a subplot figure.\n",
+    "_fig = make_subplots(\n",
+    "    rows=_subplot_rows,\n",
+    "    cols=_subplot_cols,\n",
+    "    subplot_titles=_numeric_data.columns,\n",
+    "    horizontal_spacing=0.1,\n",
+    "    vertical_spacing=0.09,\n",
+    ")\n",
+    "\n",
+    "# Subplot coordinates for placing the box plot for each column.\n",
+    "_subplot_coords = product(range(1, _subplot_rows + 1), range(1, _subplot_cols + 1))\n",
+    "\n",
+    "for (_row, _col), _col_name in zip(_subplot_coords, _numeric_data.columns):\n",
+    "    _fig.add_trace(\n",
+    "        go.Box(y=_numeric_data[_col_name], name=_col_name), row=_row, col=_col\n",
+    "    )\n",
+    "\n",
+    "# Add size, title, and margins.\n",
+    "_fig.update_layout(\n",
+    "    height=800,\n",
+    "    width=800,\n",
+    "    title={\n",
+    "        \"text\": \"Numeric Column Distributions\",\n",
+    "        \"y\": 0.965,\n",
+    "        \"x\": 0.5,\n",
+    "        \"xanchor\": \"center\",\n",
+    "        \"yanchor\": \"top\",\n",
+    "    },\n",
+    "    showlegend=False,\n",
+    "    margin=dict(t=85, l=30, r=30, b=30),\n",
+    ")\n",
+    "\n",
+    "# Adjust the `gross` and `no_of_votes` to show a log scale.\n",
+    "_fig.update_yaxes(type=\"log\", row=1, col=3)\n",
+    "_fig.update_yaxes(type=\"log\", row=2, col=3)\n",
+    "\n",
+    "numeric_column_distributions_chart = mo.ui.plotly(_fig)\n",
+    "numeric_column_distributions_chart"
    ]
   },
   {
@@ -473,7 +482,7 @@
     }
    },
    "source": [
-    "### Distributions of Numeric Columns"
+    "### Overview of `mm`"
    ]
   },
   {
@@ -483,54 +492,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Select only the numeric columns.\n",
-    "_numeric_data = mm.select(cs.numeric())\n",
-    "\n",
-    "# Create a 2x3 subplot figure.\n",
-    "_fig = make_subplots(\n",
-    "    rows=2,\n",
-    "    cols=3,\n",
-    "    subplot_titles=_numeric_data.columns,\n",
-    "    horizontal_spacing=0.1,\n",
-    "    vertical_spacing=0.09,\n",
-    ")\n",
-    "\n",
-    "# Create a \"flat\" list of subplot references in order to assign each column's boxplot in\n",
-    "# the for loop below.\n",
-    "_subplot_refs = [(row, col) for row in range(1, 3) for col in range(1, 4)]\n",
-    "\n",
-    "for (row, col), col_name in zip(_subplot_refs, _numeric_data.columns):\n",
-    "    # Create box plot and add to figure.\n",
-    "    box_plot = px.box(_numeric_data, y=col_name)\n",
-    "    _fig.add_trace(box_plot.data[0], row=row, col=col)\n",
-    "\n",
-    "_fig.update_layout(\n",
-    "    height=800,\n",
-    "    width=800,\n",
-    "    title={\n",
-    "        \"text\": \"Numeric Column Distributions\",\n",
-    "        \"y\": 0.965,\n",
-    "        \"x\": 0.5,\n",
-    "        \"xanchor\": \"center\",\n",
-    "        \"yanchor\": \"top\",\n",
-    "    },\n",
-    "    yaxis3_type=\"log\",\n",
-    "    yaxis6_type=\"log\",\n",
-    "    showlegend=False,\n",
-    "    margin=dict(t=85, l=30, r=30, b=30),\n",
-    ")\n",
-    "\n",
-    "_fig.show()"
+    "mm.describe()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "28",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "marimo": {
+     "config": {
+      "hide_code": true
+     }
+    }
+   },
    "source": [
-    "mm.describe()"
+    "## NOTEBOOK IS CHECKED UP TO THIS CELL"
    ]
   },
   {
