Fix error preventing jupyter notebook cells from running all the way through

--- a/notebooks/movie_metadata.ipynb
+++ b/notebooks/movie_metadata.ipynb
@@ -50,11 +50,11 @@
    "source": [
     "movie_metadata_path: Path = Path.cwd() / \"imdb_top_1000.csv\"\n",
     "\n",
-    "mm_raw: DataFrame = pl.read_csv(\n",
+    "mm_raw: pl.DataFrame = pl.read_csv(\n",
     "    source=movie_metadata_path, schema_overrides={\"Released_Year\": pl.String}\n",
     ")\n",
     "\n",
-    "mm: DataFrame = (\n",
+    "mm: pl.DataFrame = (\n",
     "    mm_raw\n",
     "    .select(pl.col(\"*\").exclude(\"Poster_Link\", \"Overview\", \"Certificate\"))\n",
     "    .rename(lambda col_name: col_name.lower())\n",
